--- a/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v1.master
+++ b/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v1.master
@@ -465,7 +465,7 @@
         </div>
 </div>
 <div id="s4-workspace" class="ms-core-overlay">
-<div id="s4-bodyContainer">
+<div id="s4-bodyContainer" class='maxw-container'>
 <!-- START BUZZ -->
 
 <!-- START BUZZ HEADER -->
@@ -1230,6 +1230,25 @@
 
 </div>
 <!-- end #s4-bodyContainer -->
+
+<!-- start RB footer -->
+<footer class='maxw-container'>
+  <div class='pure-g'>
+    <div class='pure-u-1 pure-u-sm-19-24'>
+      <ul>
+        <!--
+        <li><a href="#"><i class="fa fa-link fa-lg"></i>&nbsp;Footer Link</a></li>
+        -->
+      </ul>
+    </div>
+    <div class='pure-u-1 pure-u-sm-5-24'>
+      <div class='bottom-strap'>
+        <span><i class="fa fa-copyright fa-lg"></i>&nbsp;Reckitt Benckiser.</span>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- end RB footer -->
 
 <%@ Register TagPrefix="wssuc" TagName="HelpPanel" src="~/_controltemplates/15/HelpPanel.ascx" %>
     <SharePoint:AjaxDelta id="DeltaHelpPanel" runat="server">
