--- a/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v2.master
+++ b/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v2.master
@@ -531,13 +531,13 @@
       </div>
       <div class="pure-u-1-3 corporate">
         <ul>
-            <li class='badge disabled'>
-                <a href="#">
+            <li id='rb-siteusage' class='badge disabled'>
+                <a href="javascript:">
                   <i class="fa fa-institution fa-lg"></i>
                 </a>
             </li>
-            <li class='badge disabled'>
-                <a href="#">
+            <li id='rb-reportabuse' class='badge disabled'>
+                <a href="javascript:">
                   &nbsp;<i class="fa fa-exclamation-triangle fa-lg"></i>
                 </a>
             </li>
