--- a/SharePoint-CSOM/news2/resources/css/news-responsive.css
+++ b/SharePoint-CSOM/news2/resources/css/news-responsive.css
@@ -1,4 +1,4 @@
-body, html {
+/*body, html {
   -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -10,6 +10,7 @@ body, html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+*/
 
 body,
 .ms-backgroundImage {
